# data_science

./: .gitignore  README.md
agents/invest_agent/: .env.example  main.py  requirements.txt  stock_analysis_agents.py  stock_analysis_tasks.py
agents/invest_agent/tools/: browser_tools.py  calculator_tools.py  duck_search_tools.py  search_tools.py  sec_tools.py  yfinance.py
apps/summarizer/: .gitignore  README.md  docker-compose.yaml  requirements.txt
apps/summarizer/backend/: Dockerfile  pyproject.toml
apps/summarizer/backend/app/: main.py
apps/summarizer/backend/app/api/: main.py
apps/summarizer/backend/app/api/routes/: summarizer.py
apps/summarizer/backend/app/tests/: test_utils.py
apps/summarizer/backend/app/utils/: async_db_connection.py  config.py  functions.py  sync_db_connection.py
apps/summarizer/backend/db/: Dockerfile  docker-compose.yaml  init.sql
apps/summarizer/docs/: backend  fast_api_interface.ipynb  reduce_prompt.ipynb  sql_achemy.ipynb  wikipedia_summary.ipynb
apps/summarizer/docs/scripts/: main.py
apps/summarizer/frontend/: Dockerfile  pyproject.toml  streamlit_app.py
cnn/: Model_TDS.ipynb  Model_TDS_1.ipynb
eda/: benjamin_graham_stock_screener.ipynb  graphs_pandas.ipynb  graphs_spark.ipynb
llm/: FLAN_T5_PEFT.ipynb  LangChain_QnA.ipynb  OpenAI_Semantic_Search.ipynb  Tabular_Data_Retrieval_QnA.ipynb  config.env  example.ipynb  openai_wikipedia_semantic_search.ipynb
misc/: challenge_test.ipynb
spark/: pyspark_example.ipynb
