[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Diogo Schuarz <diogo.schuarz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
